--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
         "@sendgrid/mail": "^7.2.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
-        "express-handlebars": "^4.0.4"
+        "express-handlebars": "^4.0.4",
+        "pg": "^8.3.0",
+        "pg-hstore": "^2.3.3",
+        "sequelize": "^6.3.1"
     }
 }
