--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "license": "ISC",
     "dependencies": {
         "@sendgrid/mail": "^7.2.1",
+        "bcrypt": "^5.0.0",
+        "client-sessions": "^0.8.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-handlebars": "^4.0.4",
+        "mongoose": "^5.9.26",
         "pg": "^8.3.0",
         "pg-hstore": "^2.3.3",
-        "sequelize": "^6.3.1"
+        "sequelize": "^6.3.4"
     }
 }
