--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "express": "^4.17.1",
         "express-handlebars": "^4.0.4",
         "mongoose": "^5.9.26",
+        "multer": "^1.4.2",
         "pg": "^8.3.0",
         "pg-hstore": "^2.3.3",
         "sequelize": "^6.3.4"
