--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "express-handlebars": "^4.0.4",
         "mongoose": "^5.9.26",
         "multer": "^1.4.2",
+        "path": "^0.12.7",
         "pg": "^8.3.0",
         "pg-hstore": "^2.3.3",
         "sequelize": "^6.3.4"
